fixing minor issues with documentation
